chore: prepare for list var value range on entity
This pull request introduces the ability to define value ranges for list variables in the entities. The proposed approach in the CH phase involves creating a new descriptor and selector that can read all values from the entities, serving as a single source of truth. This unique list of elements is required for the queued value placer to function correctly. Additionally, a new cache tier for value range elements is implemented to enable faster access to value ranges values.

For the LS phase, the changes follow the same strategy used for basic variables, generating valid and invalid moves through the respective move generators. However, the logic for list moves in isMoveDoable has been updated to ensure that moves are valid when using entity value ranges. This approach makes the logic simpler and more performant in some cases, as generating only valid moves would require more complex changes than just ensuring it is doable.

The list var-related code is hidden behind fail fasts. It may still be refactored before getting enabled, pending performance regression tests under various conditions.